[tool.poetry]
name = "ham-tools"
version = "0.1.0"
description = ""
authors = ["Xentux <andre@xentux.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
